[project]
name = "b69"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-vertexai>=2.0.27",
    "langgraph>=0.5.4",
    "langgraph-prebuilt>=0.5.2",
    "pydantic>=2.11.7",
    "redis[hiredis]>=6.2.0",
    "uvicorn>=0.35.0",
]
